# rs3-ml

./: README.md  package_setup.ipynb  pyproject.toml  rs3-model.ipynb  rs3-request-data.ipynb  rs3-setup.ipynb
data/: social_info.csv
rspredict/: __init__.py
rspredict.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
rspredict/data/: __init__.py  datarequester.py
src/: datarequester.ipynb  predicted-prices-2024-07-31.csv  requirements.txt  rs3-data-requester.ipynb  rs3-model-ar-lstm-rnn.ipynb  rs3-model-time-series-tf.ipynb  rs3-model-time-series.ipynb  rs3-model.ipynb  rs3-request-data.ipynb  rs3-setup.ipynb  rs_data_requester.ipynb
