[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[metadata]
name = "rspredict"
version = "0.0.1"

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[project]
name = "rspredict"
version = "0.0.1"
authors = [
  { name="Andrew Yang", email="ayang9846@gmail.com" },
]
description = "Runescape Grand Exchange price wrapper intended for predictive modeling."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["Runescape", "RS3", "Grand Exchange"]